Bug 1120086: Re-open SourceBuffer after call to appendBuffer if in ended state. r=cajbir

--HG--
extra : rebase_source : 56923ceb5f28dadeda981b8365f277320afc72ba